--- a/src/renderer/app/Menu/Menu.less
+++ b/src/renderer/app/Menu/Menu.less
@@ -2,12 +2,12 @@
   min-height: 45px;
   margin: 10px 0;
 
-  .menu-icon {
+  .menuIcon {
     color: @menu-color;
     font-size: @menu-size;
   }
 
-  .menu-select-icon {
+  .menuChoosed {
     color: @menu-select-color;
   }
 }
@@ -29,3 +29,5 @@
     .menu-item();
   }
 }
+
+
