--- a/src/renderer/components/Editor/Editor.less
+++ b/src/renderer/components/Editor/Editor.less
@@ -1,8 +1,10 @@
-.CodeMirror-line {
-  font-size: 16px !important;
-  letter-spacing: 1px !important;
-}
+// .CodeMirror-line {
+//   font-size: 16px !important;
+//   letter-spacing: 1px !important;
+// }
 
 .CodeMirror-scroll {
   padding: 20px !important;
 }
+
+
