--- a/src/renderer/page/Setting/Setting.less
+++ b/src/renderer/page/Setting/Setting.less
@@ -42,6 +42,7 @@
 
 .setting-body {
   margin-top: 20px;
+  overflow: scroll;
 }
 
 .setting-body-item {
@@ -55,6 +56,26 @@
 .setting-body-item:hover {
   background-color: #252525;
   border-left: 2px solid #0c7d9d;
+}
+
+.ew-color-picker-no {
+  display: none;
+}
+
+.ew-color-picker-arrow {
+  display: none;
+}
+
+.ew-color-input {
+  color: #8f8e8e;
+  font-size: 12px;
+}
+
+.ew-color-picker {
+  position: relative;
+  width: 300px;
+  bottom: 80px;
+  left: 120px;
 }
 
 
