--- a/src/renderer/page/User/User.less
+++ b/src/renderer/page/User/User.less
@@ -1,8 +1,10 @@
 .user-box {
   margin: 20px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  overflow: scroll;
   .user-name {
     width: 128px;
     height: 45px;
@@ -10,4 +12,10 @@
     text-align: center;
     color: #cca700;
   }
+} 
+
+.calender-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
