--- a/src/renderer/app/App.less
+++ b/src/renderer/app/App.less
@@ -1,1 +1,5 @@
 @import '~antd/dist/antd.css';
+
+.ant-layout.ant-layout-has-sider > .ant-layout, .ant-layout.ant-layout-has-sider > .ant-layout-content {
+  overflow: scroll;
+}
