--- a/src/renderer/page/Setting/Setting.less
+++ b/src/renderer/page/Setting/Setting.less
@@ -38,10 +38,12 @@
   font-size: 35px;
   color: white;
   margin-top: 20px;
+  margin-left: 5%;
 }
 
 .setting-body {
   margin-top: 20px;
+  margin-left: 5%;
   overflow: scroll;
 }
 
