--- a/src/renderer/page/User/User.less
+++ b/src/renderer/page/User/User.less
@@ -6,7 +6,6 @@
   align-items: center;
   overflow: scroll;
   .user-name {
-    width: 128px;
     height: 45px;
     font-size: 18px;
     text-align: center;
@@ -19,3 +18,15 @@
   justify-content: center;
   align-items: center;
 }
+
+.avatar-uploader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .ant-upload.ant-upload-select-picture-card {
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+  }
+}
+
