--- a/src/renderer/page/Index/Index.less
+++ b/src/renderer/page/Index/Index.less
@@ -67,7 +67,7 @@
   }
   
   .icons {
-    width: 30%;
+    width: 40%;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -87,4 +87,28 @@
 
 .titleItem:hover {
   background-color: #2a2d2e !important;
+}
+
+.tool-box {
+  width: 150px;
+  height: 40px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  font-size: 20px;
+  color: white;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0px 10px;
+}
+
+.tool-box:hover {
+  opacity: 1;
+}
+
+.tool-item:hover {
+  color:rgb(55, 196, 243);
+  cursor: pointer;
 }
