--- a/src/renderer/page/User/User.less
+++ b/src/renderer/page/User/User.less
@@ -5,6 +5,13 @@
   justify-content: center;
   align-items: center;
   overflow: scroll;
+
+  .login-out {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 50px;
+  }
   .user-name {
     height: 45px;
     font-size: 18px;
