--- a/src/renderer/page/Index/Index.less
+++ b/src/renderer/page/Index/Index.less
@@ -60,12 +60,20 @@
   align-items: center;
   cursor: default;
   color: #6cb787;
+
+  .code-title {
+    display: inline;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
   .titleInput {
     width: 120px;
     overflow: hidden;
     color: white;
   }
-  
+
   .icons {
     width: 40%;
     display: flex;
@@ -109,6 +117,6 @@
 }
 
 .tool-item:hover {
-  color:rgb(55, 196, 243);
+  color: rgb(55, 196, 243);
   cursor: pointer;
 }
